--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,8 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           script: |
             cd ~/d-rqm-prod
-            echo "TOKEN=${{ secrets.DISCORD_TOKEN }}" > .env
+            echo "DISCORD_TOKEN=${{ secrets.DISCORD_TOKEN }}" > .env
+            echo "OPENAI_TOKEN=${{ secrets.OPENAI_TOKEN }}" >> .env
             git pull origin main
             python3 -m venv .venv
             source .venv/bin/activate
